# Algorithm

./: .clang-format  .drone.yml  .gitignore  .gitmodules  Makefile  README.md  base.h  includes.h  index.md  main.css  main.html  random.h
.circleci/: config.yml
.github/workflows/: ccpp.yml  verify.yml
.verify-helper/: config.toml  timestamps.remote.json
Cpp/: Base.h  MyPair.h  data.html  info.html  iroiro.cpp  main.css  main.html  quick_sort.cpp  string.html  template.cpp  test.cpp
Cpp/Data Structure/: AADynamic.h  BinaryIndexedTree.cpp  Dice.h  FenwickRAdd.h  FenwickRAddMod.cpp  FenwickRAddMod.h  FenwickTree.h  FenwickTree2D.h  FenwickTreeMod.h  GcdSegTree.cpp  HLDecomp.h  Nazoki.h  RadixHeap.h  RangeBinaryIndexedTree.cpp  RangeKthSmallest.cpp  RangeMaxQuery.h  RangeMinIndexQuery.h  StarrySkyTree.cpp  UnionFind.cpp  UnionFind.h  VectorTree.cpp  nth_element.cpp  segtree.cpp  union_find.cpp
Cpp/DataStructure/: AADynamic.h  Dice.h  FenwickTree.h  HLDecomp.h  LinkCutTree.h  RadixHeap.h  SQuickFind.h  SmallFind.h  SparceTable.h  SparseTable.h  StarrySkyTree.h  Test.h  UnionFind.h  WaveletTree.h
Cpp/DataStructure_old/: Dice.h  QuickFind.h  StarrySkyTree.h  UnionFind.h
Cpp/Flow/: BitMatching.cpp  MaxFlow.cpp  MinCostFlow.cpp  MinCostFlowOptimize.cpp  bit_matching.cpp  max_flow.cpp
Cpp/Geo/: Base.cpp  Base.h  Circle.cpp  Circle.h  GraphicCompute.h  Intersect.cpp  Intersect.h  PlanerGraph.h  Polygon.cpp  Polygon.h  Primes.cpp  circle.d
Cpp/Graph/: AllTree.h  Ariticulation.h  Base.h  BidirectedCut.h  BitMatching.h  Bridge.h  Centroid.h  Dijkstra.h  DijkstraComb.h  DirectedMST.h  Dominator.h  LCA.h  LIS.h  LowLink.h  MaxFlow.h  MinCostFlow.h  MinCostFlowOptimize.h  Retrograde.h  SCC.h  TwoSat.h  scc.h
Cpp/Graph2/: Bridge.h  LowLink.h  TwoSat.h
Cpp/Graph_old/: Bridge.h  Dijkstra.h  LCA.h  MaxFlow.h  MaxFlow_FF.h  MinCostFlow.h  MinCostFlowOptimize.h  Retrograde.h  TwoSat.h
Cpp/Math/: Combination.cpp  Combination.h  FFT.h  Karatsuba.h  Kitamasa.h  Prime.h  Primes.cpp  Primes.h
Cpp/Matrix/: Matrix.h  MatrixMod.h  MatrixMod2.h  Permutation.h  Rank.h  qr.h
Cpp/Other/: ICPC.md  Stack.h  StopWatch.h
Cpp/String/: AhoCorasick.h  KMP.h  Manacher.h  RH.h  SAIS.h  SuffixArray.h
Cpp/datastructure/: fenwicktree.h  quickfind.h  smallfind.h  starryskytree.h  unionfind.h
Cpp/geo/: intersect.h  polygon.h
Cpp/matrix/: perm.h  rank.h
Cpp/other2/: ICPC.md  stopwatch.h
Cpp/string/: manacher.h  mp.h  sais.h  suffixarray.h
DataStructure_old/: PersistentSST.h  SparseTable.h  WaveletTree.h
Dlang/: base.d  template.d  test.d  test1.txt  test2.d  test2.txt  time.d
Dlang/DataStruct/: aatree.d  binaryindexedtree.d  permutation.d  rbstree.d  rbstset.d  unionfind.d
Dlang/Flow/: bit_matching_cost.cpp  bitmatching.d  maxflow.d  maxflowff.d  min_cost_flow.cpp  mincostflow.d
Dlang/Geo/: base.d  circle.d  sectest.d  smallestenclosingcircle.d
Dlang/Graph/: dijkstra.d  scc.d
Dlang/Math/: math.d  primes.d
Graph_old/: Dominator.h  JointPoint.h  SCC.h
ICPC/: fft.h  fft_test.cpp
container/: matrix.h  poly.h  rank.h
datastructure/: dice.h  fastset.h  fenwicktree.h  smallfind.h  sparsetable.h  starryskytree.h
expander/: expander.py  expander.py.md
geo/: base.h  polygon.h
graph/: base.h  bridge.h  centroid.h  dijkstra.h  dominator.h  hldecomp.h  lca.h  lowlink.h  maxflow.h  mincostflow.h  scc.h  twosat.h
html/: graph.html
math/: fft.h  prime.h
src/: Makefile  Makefile_tmp  aplusb.hpp.md  base.cpp  base.cpp.md  base.h  base.hpp  base.hpp.md  bimaching.test.cpp.md  bitop.h  bitop.hpp  bitop.hpp.md  comb.test.cpp.md  dbg.test.cpp.md  doublingsa.test.cpp.md  fenwick_2d_rectangle_sum.test.cpp.md  hashmap.test.cpp.md  hashmap_remove.test.cpp.md  hashset.test.cpp.md  hashset_hashmap.test.cpp.md  hl_lca.test.cpp.md  hl_vertex_add_path_sum.test.cpp.md  hl_vertex_add_subtree_sum.test.cpp.md  inv_of_formal_power_series.test.cpp.md  lctree_lca.test.cpp.md  lctree_vertex_add_path_sum.test.cpp.md  matrix.h  max_clique.test.cpp.md  modint.test.cpp.md  modint61.test.cpp.md  nft_convolution.test.cpp.md  nimber.test.cpp.md  number_of_substrings.test.cpp.md  online-zalgo.test.cpp.md  prime.h  printer.test.cpp.md  rollinghash_zalgo.test.cpp.md  run.test.cpp.md  sais.test.cpp.md  scanner.test.cpp.md  (+6 more)
string/: lcp.h  sais.h  sawrapper.h  suffixarray.h  zalgo.h
test/: CMakeLists.txt  fft_test.cpp  gcd_test.cpp  mf_test.h  modint_test.cpp  prime_test.cpp  random.h  sa_test.h  solutions.toml  twosat_test.h
test-oj/: aplusb.hpp  base.h  bimaching.test.cpp  bitop.h  comb.test.cpp  datastructure  dbg.test.cpp  doublingsa.test.cpp  fenwick_2d_rectangle_sum.test.cpp  geo  graph  hashmap.test.cpp  hashmap_remove.test.cpp  hashset.test.cpp  hashset_hashmap.test.cpp  hl_lca.test.cpp  hl_vertex_add_path_sum.test.cpp  hl_vertex_add_subtree_sum.test.cpp  inv_of_formal_power_series.test.cpp  lctree_lca.test.cpp  lctree_vertex_add_path_sum.test.cpp  local_test.sh  math  max_clique.test.cpp  modint.test.cpp  modint61.test.cpp  nft_convolution.cpp  nft_convolution.test.cpp  nimber.test.cpp  number_of_substrings.test.cpp  online-zalgo.test.cpp  printer.test.cpp  rollinghash_zalgo.test.cpp  run.test.cpp  run.test.out.cpp  sais.test.cpp  scanner.test.cpp  scanner_many_aplusb.test.cpp  staticrangesum_rectangle_sum.test.cpp  string  (+8 more)
test/datastructure/: bitvector_test.cpp  fastset_test.cpp  fenwick_test.cpp  quickfind_test.cpp  staticrmq_test.cpp  unionfind_test.cpp  wavelet_test.cpp
test/geo/: geo_test.cpp
test/graph/: dijkstra_radix_test.cpp  dijkstra_test.cpp  lca_test.cpp  maxmatch_test.cpp  mcf_double_test.cpp  mcf_radix_test.cpp  mcf_test.cpp  mcf_test_old.cpp  mf_test.cpp  scc_test.cpp  twosat_test.cpp  uf_test.cpp
test/math/: fft_test.cpp  gcd_test.cpp  matrix_mod2_test.cpp  matrix_mod_test.cpp  modint_test.cpp  nft_test.cpp  poly_local_test.cpp  poly_test.cpp  prime_test.cpp
test/string/: ahocorasick_test.cpp  manacher_test.cpp  suffixarray_test.cpp  zalgo_test.cpp
test/tree/: lca_test.cpp
tests/: Makefile  gcd_test.cpp  gcd_test.h  main_test.cpp  mcf_test.h  sa_test.h
(+340 files in other folders)
